# sdl-sample

./: CMakeLists.txt  README.md  Setup.bat
include/: Application.h  ApplicationBase.h  Camera.h  Drawable.h  FileUtility.h  GameFramework.h  IRenderer.h  IView.h  IndexBuffer.h  LifeCycle.h  Material.h  Mesh.h  SDLView.h  SDL_GLRenderer.h  Shader.h  Time.h  TransformNode.h  VertexArray.h  VertexBuffer.h  WindowsEntry.h  pch.h
sandbox/: CMakeLists.txt  SandBox.cpp  SandBox.h  main.cpp
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Drawable.cpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  SDLView.cpp  SDL_GLRenderer.cpp  Shader.cpp  Time.cpp  TransformNode.cpp  VertexBuffer.cpp  WindowsEntry.cpp
